# sportyfin

./: .gitignore  Dockerfile  LICENSE  LICENSE.txt  README.md  game_info.py  league_colours.py  main.py  pretty_print.py  requirements.txt  scraping.py  setup.cfg  setup.py
.github/workflows/: docker-image.yml
sportyfin/: __init__.py  __main__.py  sportyfin.py
sportyfin/util/: game_info.py  league_colours.py  pretty_print.py  scraping.py
src/sportyfin/: __init__.py  sportyfin.py
src/sportyfin/util/: game_info.py  pretty_print.py  scraping.py
util/: game_info.py  league_colours.py  pretty_print.py  scraping.py
