# https://github.com/axelmierczuk/sportyfin
[metadata]
name = sportyfin
version = 0.1.6
author = Axel Mierczuk
author_email = axelmierczuk@gmail.com
url = https://github.com/axelmierczuk/sportyfin
description = file: README.md
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = COPYING
platform = any
classifiers=
        Development Status :: 4 - Beta
        Intended Audience :: Telecommunications Industry
        License :: OSI Approved :: MIT License
        Programming Language :: Python
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.4
        Programming Language :: Python :: 3.5
        Programming Language :: Python :: 3.9